Improve css. Fix height + overflow bug.
Suggestion:
-Fix logical bugs. (2 decimal points,etc)

--- a/styles.css
+++ b/styles.css
@@ -7,32 +7,40 @@ body {
 
     display: flex;
     flex-direction: column;
-    gap: 24px;
     justify-content: center;
     align-items: center;
     
 }
 
 #outermost {
-    box-sizing: border-box;
-    height: 70%;
-    min-width: 500px;
+    box-sizing: content-box;
+    padding: 40px 10px 20px 10px;
+
+    min-height: 420px;
+    height: 60%;
+    width: 45%;
+    min-width: 380px;
+    max-width: 440px;
+
     border: 1.3px solid rgb(0, 0, 0);
     border-radius: 20px;
     background-color: rgb(103, 104, 108);
 
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
 }
 
 #Display {
-    min-width: 460px;
-    min-height: 100px;
+    height: 18%;
+    min-height: 12%;
+    width: 95%;
+    min-width: 95%;
+    max-width: 99%;
+
     border: 1.3px solid black;
     border-radius: 2px;
     background-color: rgb(215, 215, 223);
-    margin: 36px 0 50px 0;
-    padding-right: 8px;
 
     display: flex;
     justify-content: flex-end;
@@ -46,7 +54,10 @@ body {
 }
 
 #mainContainer {
-    width: 460px;
+    width: 95%;
+    min-width: 95%;
+    max-width: 99%;
+
     height: 70%;
     border: 1.2px solid black;
     border-radius: 20px;
@@ -58,6 +69,8 @@ body {
 }
 
 #column1, #column2, #column3, #column4  {
+    width: 100%;
+    gap: 12px;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -68,12 +81,13 @@ body {
 
 /*column 1 buttons*/
 #column1 button {
-    height: 70px;
     width: 70px;
+    height: 70px;
+    min-height: 30px;
+
     border: 1.2px solid black;
     border-radius: 8px;
     background-color: rgb(226, 226, 232);
-
 
     font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
@@ -123,10 +137,6 @@ body {
 
     font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
-    font-size: 30px;
+    font-size: 25px;
     color: rgb(66, 64, 64);
-}
-
-#column3 #bPercent, #column3 #bDecimal {
-    font-size: 30px;
 }
